# hitalent_test

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2b271ab550ca_create_tables.py
src/: config.py  errors.py
src/api/: models.py  router.py  validation.py
src/dto/: dto.py
src/postgres/: base.py  models.py  queries.py
